--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.0.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>iss.nus</groupId>
-	<artifactId>workshop26</artifactId>
+	<groupId>com.ws26prac</groupId>
+	<artifactId>prac26</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>workshop26</name>
-	<description>Mongodb</description>
+	<name>prac26</name>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -41,14 +41,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.glassfish/jakarta.json -->
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>jakarta.json</artifactId>
 			<version>2.0.1</version>
 		</dependency>
-		
 	</dependencies>
 
 	<build>
